fixed alignment and sizing of initial draft

--- a/style.css
+++ b/style.css
@@ -55,21 +55,23 @@ main{
 
 .top .upcenter .banner{
   font-family: 'Neuton', serif;
-  border: 1px solid black;
-  font-size: 40px;
-  height: 10%;
+  padding: 5px;
+  font-size: 35px;
 }
 
 .menu{
   display: inline-block;
 }
 
+.menu a{
+    display: inline-block;
+}
+
 .menu button{
-  display: inline-block;
   padding: 3px;
   background-color: #075E1E;
   text-align: center;
-  width: 75%;
+  width: 100px;
   border: 1px solid black;
   border-radius: 12px;
 }
@@ -91,6 +93,9 @@ main{
 
 .content{
   display: inline-block;
+  grid-column: 1 / span 5;
+  grid-row: 2 / 5;
+  border: 1px solid black;
 }
 
 .content_left{
@@ -99,7 +104,7 @@ main{
   background-color: #FFCE2E;
   grid-column: 1;
   width: 15%;
-  grid-row: 2 / 10;
+  grid-row: 2 / 5;
   height: 50%;
   border: 1px solid black;
   border-radius: 12px;
@@ -115,7 +120,7 @@ main{
 }
 
 footer{
-
+  text-align: center;
 }
 
 .center{
@@ -131,6 +136,7 @@ footer{
 
 .content_right{
   display:inline-block;
+  float: right;
   text-align: center;
   background-color: #006E07;
   grid-column: 2 / span 3;
